bpk-lib/crates/macbat/macros/tests/trybuild_negative/projection_unknown_input.stderr
error: unknown key `inputt`
 --> tests/trybuild_negative/projection_unknown_input.rs:3:10
  |
3 | #[batpak(inputt = JsonValueInput, event = Ev, handler = on_ev)]
  |          ^^^^^^
