bpk-lib/crates/macbat/macros/tests/trybuild_negative/projection_unknown_input.rs
use macbat::Projection;
#[derive(Projection)]
#[batpak(inputt = JsonValueInput, event = Ev, handler = on_ev)]
struct P {
    a: u8,
}
fn main() {}
